# DogWalkerSimulatorBeta

./: CMakeLists.txt
SFML/lib/cmake/SFML/: SFMLStaticTargets.cmake
SFML/lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
src/: main.cpp
